style/about.css
/* ... */
.skillContainer_child:hover img {
    transform: rotate(360deg); 
    box-shadow: 2px 4px 3px 1px lightslategray;
    transform: translate(-5px);
}

/*  *********************** Bullet point text *********************** */
.bulletPoint_text {
    top: 2px;
    margin-left: -10px;
}

/*  *********************** Bullet point colors *********************** */
.green_bullet {
    list-style-type: none;
    position: relative;
    padding-left: 0;
}
.green_bullet li {
    position: relative;
    padding-left: 20px;
    line-height: 1.5;
    margin-bottom: 20px;
}
.green_bullet::before {
    content: "•";
    color: rgb(3, 250, 3);
    font-size: 30px;
    position: absolute;
    left: 0;
    top: -5px;
}

.white_bullet {
    list-style-type: none;
    position: relative;
}
.white_bullet::before {
    content: "•";
    color: white;
    font-size: 26px;
    position: absolute;
    left: 0;
    top: -5px;
}

.red_bullet {
    list-style-type: none;
    position: relative;
}
.red_bullet::before {
    content: "•";
    color: red;
    font-size: 30px;
    position: absolute;
    left: 0;
    top: -5px;
}

.yellow_bullet {
    list-style-type: none;
    position: relative;
}
.yellow_bullet::before {
    content: "•";
    color: yellow;
    font-size: 30px;
    position: absolute;
    left: 0;
    top: -5px;
}

/*  *********************** Bullet point colors *********************** */
.skill_name {
    margin-bottom: 5px;
    font-size: 20px;
}

/*  *********************** Tool-tip *********************** */
.toolTip {
    visibility: hidden; /* Hidden by default */
    width: 150px;
    background-color: black;
    border: 2px solid white;
    color: white;
    text-align: center;
    border-radius: 6px;
    padding: 8px;
    position: absolute;
    z-index: 1;
    bottom: 125%; /* Position it above the list item */
    left: 50%;
    transform: translateX(-50%);
    opacity: 0;
    transition: opacity 0.3s;
}

.toolTip::after {
    content: "";
    position: absolute;
    top: 100%; 
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: black transparent transparent transparent;
}

.green_bullet li:hover .toolTip {
    visibility: visible;
    opacity: 1;
}

.white_bullet li:hover .toolTip {
    visibility: visible;
    opacity: 1;
}

.red_bullet li:hover .toolTip {
    visibility: visible;
    opacity: 1;
}


.yellow_bullet li:hover .toolTip {
    visibility: visible;
    opacity: 1;
}

/*  *********************** Arrows *********************** */
.upArrow {
    width: 30px;
    height: 30px;
    margin-left: 10px;
    vertical-align: middle;
}
.downArrow {
    width: 30px;
    height: 30px;
    margin-left: 10px;
    vertical-align: middle;
}

/*  *********************** Containers Wrapper *********************** */
.containers_wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 10px;
    height: auto;
    flex-direction: row; 
}
@media screen and (max-width: 480px) {
    .containers_wrapper {
        flex-direction: column; 
        margin-top: 60%;
        height: auto;
        width: 96%;
    }
}
@media screen and (min-width: 481px) {
    .containers_wrapper {
        flex-direction: row; 
        margin-top: 15%;
    }
}


/*  *********************** Soft Skills Container*********************** */
.softSkills_container {
    background-color: black;
    width: 100%;
    height: 220px;
    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
    transition: box-shadow 0.3s, transform 0.3s;
    display: flex; 
    flex-wrap: wrap; 
    border-radius: 30px;
    animation: fadeInText 5s ease forwards;
}
@media screen and (max-width: 480px) {
    .softSkills_container {
        flex-direction: column; 
        width: 90%; 
        height: auto; 
        display: grid;
        justify-items: center;
    }
}
@media screen and (min-width: 481px) {
    .softSkills_container {
        flex-direction: row; 
        justify-content: center;
        align-items: center;
        margin-left: 10%;
        margin-right: 10%;
    }
}

.coursework_container {
    background-color: black;
    width: 100%;
    height: 220px;
    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
    transition: box-shadow 0.3s, transform 0.3s;
    display: flex; 
    flex-wrap: wrap; 
    border-radius: 30px;
    animation: fadeInText 5s ease forwards;
}
@media screen and (max-width: 480px) {
    .coursework_container {
        flex-direction: column; 
        width: 90%; 
        height: auto; 
        margin-top: 10%;
        display: grid;
        justify-items: center;
    }
}
@media screen and (min-width: 481px) {
    .coursework_container {
        flex-direction: row; 
        justify-content: center;
        align-items: center;
        margin-left: 10%;
        margin-right: 10%;
    }
}

.softSkillsContent_wrapper {
    margin-top: -12%;
}


/*  *********************** Tab Wrapper *********************** */
.tab_wrapper {
    display: flex;
    justify-content: space-around; 
    flex-wrap: wrap; 
    width: 100%; 
    padding: 10px;
}
@media screen and (max-width: 480px) {
    .tab_wrapper {
        margin-top: 40%;
        margin-left: 18%;
        height: auto;
    }
}
@media screen and (min-width: 481px) {
    .tab_wrapper {
        margin-top: 15%;
        margin-left: 8%;
    }
}

/*  *********************** Soft Skills Tab *********************** */
.softSkills_tab {
    padding: 0px;
    text-align: center;
    justify-content: center;
    border: 3px solid black;
    border-radius: 30px;
    background-color: black;
    box-shadow: 0 0 8px 1.5px lightgray;
    cursor: pointer;
    transition: transform .5s ease;
    animation: fadeInText 10s ease forwards, floating 2s infinite alternate;
}
@media screen and (max-width: 480px) {
    .softSkills_tab {
        font-size: 20px;
        width: 40%;
        height: auto;
        margin-top: 8%;
        text-align: center;
        margin-right: 0%;
    }
}
/* ... */

